# gatekeep

./: .gitignore  .mise.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.yml  justfile  pnpm-lock.yaml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
crates/gatekeep/: Cargo.toml
crates/gatekeep-axum/: Cargo.toml
crates/gatekeep-axum/src/: authorizer.rs  error.rs  lib.rs  response.rs  test_support.rs
crates/gatekeep-axum/tests/: authorization.rs
crates/gatekeep-axum/tests/support/: mod.rs
crates/gatekeep-fluent/: Cargo.toml
crates/gatekeep-fluent/src/: lib.rs
crates/gatekeep-fluent/tests/: catalog.rs
crates/gatekeep-keepsake/: Cargo.toml
crates/gatekeep-keepsake/src/: binding.rs  error.rs  lib.rs  resolver.rs  source.rs  subject.rs  target.rs
crates/gatekeep-keepsake/tests/: resolver.rs
crates/gatekeep-keepsake/tests/support/: mod.rs
crates/gatekeep-sqlx/: Cargo.toml
crates/gatekeep-sqlx/migrations/mysql/: 0001_audit.sql
crates/gatekeep-sqlx/migrations/postgres/: 0001_audit.sql
crates/gatekeep-sqlx/migrations/sqlite/: 0001_audit.sql
crates/gatekeep-sqlx/src/: fragment.rs  lib.rs
crates/gatekeep-sqlx/src/audit/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  support.rs
crates/gatekeep-sqlx/tests/: lowering.rs  mysql.rs  postgres.rs  sqlite_audit.rs
crates/gatekeep-sqlx/tests/audit_support/: mod.rs
crates/gatekeep-sqlx/tests/postgres/: audit.rs  binds.rs  lowering.rs  support.rs
crates/gatekeep/src/: adapters.rs  audit_memory.rs  condition.rs  decision.rs  evaluate.rs  facts.rs  identity.rs  lib.rs  partial.rs  policy.rs  policy_model.rs
crates/gatekeep/tests/: adapters.rs  core.rs  identity.rs  send_app_case_access.rs
docs/: 0.1.0-gatekeep-audit.md  README.md  SPEC.md  installation.md  keepsake-dx-followup.md  overview.md  quickstart.md
docs-site/: astro.config.mjs  package.json
docs-site/src/content/docs/: index.mdx
docs-site/src/content/docs/concepts/: authorization-model.mdx  decisions-and-audit.mdx  facts-and-context.mdx  lattice-outcomes.mdx
docs-site/src/content/docs/guides/: axum-authorization.mdx  durable-audit.mdx  keepsake-entitlements.mdx  sqlx-list-filtering.mdx
docs-site/src/content/docs/operations/: audit-export.mdx  migrations.mdx
docs-site/src/content/docs/reference/: feature-flags.mdx  policy-combinators.mdx  reason-catalogs.mdx  sqlx-adapter.mdx
docs-site/src/content/docs/start-here/: installation.mdx  overview.mdx  quickstart.mdx
docs-site/src/styles/: custom.css
docs/concepts/: authorization-model.md  decisions-and-audit.md  facts-and-context.md  lattice-outcomes.md
docs/guides/: axum-authorization.md  durable-audit.md  keepsake-entitlements.md  sqlx-list-filtering.md
docs/operations/: audit-export.md  migrations.md  versioning.md
docs/reference/: feature-flags.md  policy-combinators.md  reason-catalogs.md  sqlx-adapter.md
examples/authorized-list-support/: Cargo.toml
examples/authorized-list-support/src/: lib.rs
examples/axum-authorized-list/: Cargo.toml
examples/axum-authorized-list/src/: main.rs
examples/axum-keepsake-authorized-list/: Cargo.toml
examples/axum-keepsake-authorized-list/src/: main.rs
scripts/: check-project-gates.sh
tools/ast-grep/: README.md
