[workspace]
members = ["crates/gatekeep", "crates/gatekeep-sqlx"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/mari/gatekeep-rs"
rust-version = "1.96"
homepage = "https://codeberg.org/mari/gatekeep-rs"
authors = ["Mari"]

[workspace.dependencies]
async-trait = "0.1.89"
blake3 = "1.8.2"
postcard = { version = "1.1.3", features = ["alloc"] }
proptest = "1.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "time", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
unimplemented = "deny"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
