[package]
name = "gatekeep-axum"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Axum integration adapter for gatekeep"
readme = "../../README.md"
categories = ["authentication", "web-programming"]
keywords = ["authorization", "policy", "authz", "axum"]

[dependencies]
axum.workspace = true
gatekeep = { path = "../gatekeep", version = "0.1.0" }
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
