[package]
name = "gatekeep-keepsake"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Keepsake relation fact resolver for gatekeep"
readme = "../../README.md"
categories = ["authentication", "data-structures"]
keywords = ["authorization", "policy", "authz", "relations"]

[dependencies]
async-trait.workspace = true
gatekeep = { path = "../gatekeep", version = "0.1.0" }
keepsake.workspace = true
keepsake-sqlx = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
default = []
sqlx = ["dep:keepsake-sqlx"]

[lints]
workspace = true
