[package]
name = "gatekeep-keepsake"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Keepsake relation fact resolver for gatekeep"
readme = "../../README.md"
categories = ["authentication", "data-structures"]
keywords = ["authorization", "policy", "authz", "relations"]
documentation = "https://docs.rs/gatekeep-keepsake"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
gatekeep = { path = "../gatekeep", version = "1.0.0" }
keepsake.workspace = true
thiserror.workspace = true

[dev-dependencies]
keepsake = { workspace = true, features = ["test"] }
tokio.workspace = true

[features]
default = []
in-memory = ["keepsake/test"]

[lints]
workspace = true
