[package]
name = "gatekeep-sqlx"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true
description = "SQLx query lowering adapter for gatekeep"
readme = "../../README.md"
categories = ["authentication", "database"]
keywords = ["authorization", "policy", "authz", "sqlx"]

[features]
default = ["postgres"]
postgres = ["sqlx/postgres", "sqlx/time", "sqlx/uuid"]
sqlite = ["sqlx/sqlite", "sqlx/time", "sqlx/uuid"]
mysql = ["sqlx/mysql", "sqlx/time", "sqlx/uuid"]
postgres-tests = ["postgres", "sqlx/runtime-tokio"]
sqlite-tests = ["sqlite", "sqlx/runtime-tokio"]
mysql-tests = ["mysql", "sqlx/runtime-tokio"]

[dependencies]
gatekeep = { path = "../gatekeep", version = "0.2.0" }
sqlx = { workspace = true, features = ["time", "uuid"] }
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
tokio.workspace = true

[lints]
workspace = true
