[package]
name = "gatekeep"
version = "1.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Code-first authorization engine for Rust"
readme = "../../README.md"
categories = ["authentication", "data-structures"]
keywords = ["authorization", "policy", "authz", "audit"]
documentation = "https://docs.rs/gatekeep"

[features]
default = []
test = []

[dependencies]
async-trait.workspace = true
blake3.workspace = true
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true

[lints]
workspace = true
