[package]
name = "gatekeep-example-axum-authorized-list"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Runnable axum authorized-list example for gatekeep"

[dependencies]
async-trait.workspace = true
axum = { workspace = true, features = ["http1"] }
gatekeep = { path = "../../crates/gatekeep" }
gatekeep-example-authorized-list-support = { path = "../authorized-list-support" }
gatekeep-axum = { path = "../../crates/gatekeep-axum" }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tower.workspace = true

[lints]
workspace = true
