[package]
name = "gatekeep-example-axum-keepsake-authorized-list"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Runnable axum and keepsake authorized-list example for gatekeep"

[dependencies]
axum = { workspace = true, features = ["http1"] }
chrono.workspace = true
gatekeep = { path = "../../crates/gatekeep" }
gatekeep-example-authorized-list-support = { path = "../authorized-list-support" }
gatekeep-axum = { path = "../../crates/gatekeep-axum" }
gatekeep-keepsake = { path = "../../crates/gatekeep-keepsake" }
keepsake = { workspace = true, features = ["test"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tower.workspace = true

[lints]
workspace = true
